{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 24,
  "lineage": "8798fd2d-d4d9-8c58-2da2-c8b14378e1d1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "emptesting_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c20c5fcd0c3c5488",
            "association_id": "eipassoc-046b61e731085da1b",
            "domain": "vpc",
            "id": "eipalloc-0c20c5fcd0c3c5488",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c79d95ff41687b95",
            "private_dns": "ip-10-11-10-0.ec2.internal",
            "private_ip": "10.11.10.0",
            "public_dns": "ec2-44-220-238-143.compute-1.amazonaws.com",
            "public_ip": "44.220.238.143",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "emptesting_eip"
            },
            "tags_all": {
              "Name": "emptesting_eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.emptesting_igw",
            "aws_vpc.emptesting_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "emptesting_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624907404009:internet-gateway/igw-0f0124ca75fafcf9e",
            "id": "igw-0f0124ca75fafcf9e",
            "owner_id": "624907404009",
            "tags": {
              "Name": "emptesting_igw"
            },
            "tags_all": {
              "Name": "emptesting_igw"
            },
            "vpc_id": "vpc-00b6afb336bd50080"
          },
          "dependencies": [
            "aws_vpc.emptesting_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "emptesting_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c20c5fcd0c3c5488",
            "association_id": "eipassoc-046b61e731085da1b",
            "connectivity_type": "public",
            "id": "nat-09aa531320c57e22a",
            "network_interface_id": "eni-0c79d95ff41687b95",
            "private_ip": "10.11.10.0",
            "public_ip": "44.220.238.143",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0363a44dae9018153",
            "tags": {
              "Name": "emptesting_nat_gateway"
            },
            "tags_all": {
              "Name": "emptesting_nat_gateway"
            }
          },
          "dependencies": [
            "aws_eip.emptesting_eip",
            "aws_internet_gateway.emptesting_igw",
            "aws_subnet.emptesting_public_subnet_1a",
            "aws_vpc.emptesting_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "emptesting_private_route_table1_us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624907404009:route-table/rtb-0deeda0f415e25143",
            "id": "rtb-0deeda0f415e25143",
            "owner_id": "624907404009",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09aa531320c57e22a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "emptesting_private_route_table1_us-east-1a"
            },
            "tags_all": {
              "Name": "emptesting_private_route_table1_us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b6afb336bd50080"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.emptesting_nat_gateway",
            "aws_vpc.emptesting_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "emptesting_private_route_table2_us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624907404009:route-table/rtb-08d8316d9efc1d97c",
            "id": "rtb-08d8316d9efc1d97c",
            "owner_id": "624907404009",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09aa531320c57e22a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "emptesting_private_route_table2_us-east-1b"
            },
            "tags_all": {
              "Name": "emptesting_private_route_table2_us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b6afb336bd50080"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.emptesting_nat_gateway",
            "aws_vpc.emptesting_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "emptesting_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624907404009:route-table/rtb-0c498c1351767fb13",
            "id": "rtb-0c498c1351767fb13",
            "owner_id": "624907404009",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f0124ca75fafcf9e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "emptesting_public_route_table"
            },
            "tags_all": {
              "Name": "emptesting_public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b6afb336bd50080"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.emptesting_igw",
            "aws_vpc.emptesting_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "emptesting_private_subnet_1a_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06003e8e0c44189d9",
            "route_table_id": "rtb-0deeda0f415e25143",
            "subnet_id": "subnet-0ae681cc3e1be9cdf"
          },
          "dependencies": [
            "aws_nat_gateway.emptesting_nat_gateway",
            "aws_route_table.emptesting_private_route_table1_us-east-1a",
            "aws_subnet.emptesting_private_subnet_1a",
            "aws_vpc.emptesting_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "emptesting_private_subnet_1b_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea3d759de59c2590",
            "route_table_id": "rtb-08d8316d9efc1d97c",
            "subnet_id": "subnet-019aac793a6100019"
          },
          "dependencies": [
            "aws_nat_gateway.emptesting_nat_gateway",
            "aws_route_table.emptesting_private_route_table2_us-east-1b",
            "aws_subnet.emptesting_private_subnet_1b",
            "aws_vpc.emptesting_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "emptesting_public_subnet_1a_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d2ff1e2c9bdeace",
            "route_table_id": "rtb-0c498c1351767fb13",
            "subnet_id": "subnet-0363a44dae9018153"
          },
          "dependencies": [
            "aws_internet_gateway.emptesting_igw",
            "aws_route_table.emptesting_public_route_table",
            "aws_subnet.emptesting_public_subnet_1a",
            "aws_vpc.emptesting_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "emptesting_public_subnet_1b_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f87ea2137aea90b",
            "route_table_id": "rtb-0c498c1351767fb13",
            "subnet_id": "subnet-08f80bc1ceeaebe1a"
          },
          "dependencies": [
            "aws_internet_gateway.emptesting_igw",
            "aws_route_table.emptesting_public_route_table",
            "aws_subnet.emptesting_public_subnet_1b",
            "aws_vpc.emptesting_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "emptesting_private_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624907404009:subnet/subnet-0ae681cc3e1be9cdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.11.0.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae681cc3e1be9cdf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "624907404009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "emptesting_private_subnet_1a"
            },
            "tags_all": {
              "Name": "emptesting_private_subnet_1a"
            },
            "vpc_id": "vpc-00b6afb336bd50080"
          },
          "dependencies": [
            "aws_eip.emptesting_eip",
            "aws_internet_gateway.emptesting_igw",
            "aws_nat_gateway.emptesting_nat_gateway",
            "aws_subnet.emptesting_public_subnet_1a",
            "aws_vpc.emptesting_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "emptesting_private_subnet_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624907404009:subnet/subnet-019aac793a6100019",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.11.4.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019aac793a6100019",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "624907404009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "emptesting_private_subnet_1b"
            },
            "tags_all": {
              "Name": "emptesting_private_subnet_1b"
            },
            "vpc_id": "vpc-00b6afb336bd50080"
          },
          "dependencies": [
            "aws_eip.emptesting_eip",
            "aws_internet_gateway.emptesting_igw",
            "aws_nat_gateway.emptesting_nat_gateway",
            "aws_subnet.emptesting_public_subnet_1a",
            "aws_vpc.emptesting_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "emptesting_public_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624907404009:subnet/subnet-0363a44dae9018153",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.11.8.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0363a44dae9018153",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "624907404009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "emptesting_public_subnet_1a"
            },
            "tags_all": {
              "Name": "emptesting_public_subnet_1a"
            },
            "vpc_id": "vpc-00b6afb336bd50080"
          },
          "dependencies": [
            "aws_vpc.emptesting_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "emptesting_public_subnet_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624907404009:subnet/subnet-08f80bc1ceeaebe1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.11.12.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f80bc1ceeaebe1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "624907404009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "emptesting_public_subnet_1b"
            },
            "tags_all": {
              "Name": "emptesting_public_subnet_1b"
            },
            "vpc_id": "vpc-00b6afb336bd50080"
          },
          "dependencies": [
            "aws_vpc.emptesting_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "emptesting_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624907404009:vpc/vpc-00b6afb336bd50080",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.11.0.0/20",
            "default_network_acl_id": "acl-0e792fcc6a28d84a5",
            "default_route_table_id": "rtb-0e57f2796b6a6d647",
            "default_security_group_id": "sg-00a8749c2558b6308",
            "dhcp_options_id": "dopt-a6b3fac0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00b6afb336bd50080",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e57f2796b6a6d647",
            "owner_id": "624907404009",
            "tags": {
              "Name": "emptesting_vpc"
            },
            "tags_all": {
              "Name": "emptesting_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "emptesting_s3_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624907404009:vpc-endpoint/vpce-050f68f72ab687385",
            "cidr_blocks": [
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21"
            ],
            "id": "vpce-050f68f72ab687385",
            "owner_id": "624907404009",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Name": "emptesting_s3_endpoint"
            },
            "tags_all": {
              "Name": "emptesting_s3_endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-00b6afb336bd50080"
          },
          "dependencies": [
            "aws_vpc.emptesting_vpc"
          ]
        }
      ]
    }
  ]
}